WIP - add qradar to security workshop
Signed-off-by: Adam Miller <admiller@redhat.com>

--- a/provisioner/roles/manage_ec2_instances/defaults/main.yml
+++ b/provisioner/roles/manage_ec2_instances/defaults/main.yml
@@ -105,3 +105,11 @@ ec2_info:
     architecture: x86_64
     filter: 'OnCommand_Cloud_Manager_3.7.0_Marketplace*'
     username: ec2-user
+  qradar:
+    owners: 324218975267
+    size: t2.2xlarge
+    os_type: linux
+    disk_space: 300
+    architecture: x86_64
+    filter: 'AnsibleSecurity-QRadarCE*'
+    username: ec2-user
