--- a/provisioner/roles/manage_ec2_instances/tasks/instances_security.yml
+++ b/provisioner/roles/manage_ec2_instances/tasks/instances_security.yml
@@ -1,45 +1,92 @@
 - import_tasks: ami_find_security.yml
 
-- name: Create EC2 instances for splunk
-  ec2:
-    assign_public_ip: yes
-    key_name: "{{ ec2_name_prefix }}-key"
-    group: "{{ ec2_security_group }}"
-    instance_type: "{{ ec2_info['splunk_enterprise']['size'] }}"
-    image: "{{ splunk_ami['image_id'] }}"
-    region: "{{ ec2_region }}"
-    exact_count: "{{ student_total }}"
-    count_tag:
-      Workshop_splunk: "{{ec2_name_prefix}}-splunk"
-    wait: "{{ ec2_wait }}"
-    vpc_subnet_id: "{{ ec2_vpc_subnet_id }}"
-    volumes:
-      - device_name: /dev/sda1
-        volume_type: gp2
-        volume_size: "{{ ec2_info['splunk_enterprise']['disk_space'] }}"
-        delete_on_termination: true
-  register: splunk_output
+- name: EC2 Create Block for splunk
+  when: security_console == 'splunk'
+  block:
+    - name: Create EC2 instances for splunk
+      ec2:
+        assign_public_ip: yes
+        key_name: "{{ ec2_name_prefix }}-key"
+        group: "{{ ec2_security_group }}"
+        instance_type: "{{ ec2_info['splunk_enterprise']['size'] }}"
+        image: "{{ splunk_ami['image_id'] }}"
+        region: "{{ ec2_region }}"
+        exact_count: "{{ student_total }}"
+        count_tag:
+          Workshop_splunk: "{{ec2_name_prefix}}-splunk"
+        wait: "{{ ec2_wait }}"
+        vpc_subnet_id: "{{ ec2_vpc_subnet_id }}"
+        volumes:
+          - device_name: /dev/sda1
+            volume_type: gp2
+            volume_size: "{{ ec2_info['splunk_enterprise']['disk_space'] }}"
+            delete_on_termination: true
+      register: splunk_output
 
-- name: Ensure tags are present for splunk
-  ec2_tag:
-    region: "{{ ec2_region }}"
-    resource: "{{item[1]}}"
-    state: present
-    tags:
-      Name: "{{ ec2_name_prefix }}-student{{item[0] + 1}}-splunk"
-      Workshop_splunk: "{{ec2_name_prefix}}-splunk"
-      Workshop: "{{ec2_name_prefix}}"
-      Index: "{{ item[0] }}"
-      Student: "student{{item[0] + 1}}"
-      AWS_USERNAME: "{{ linklight_user }}"
-      Info: "AWS_USERNAME that provisioned this-> {{ linklight_user }}"
-      Linklight: "This was provisioned through the linklight provisioner"
-      Students: "{{student_total}}"
-      short_name: "splunk"
-      username: '{{ec2_info["rhel7"]["username"]}}'
-  with_indexed_items:
-    - "{{ splunk_output['instance_ids'] }}"
-  when: splunk_output['instance_ids'] is not none
+    - name: Ensure tags are present for splunk
+      ec2_tag:
+        region: "{{ ec2_region }}"
+        resource: "{{item[1]}}"
+        state: present
+        tags:
+          Name: "{{ ec2_name_prefix }}-student{{item[0] + 1}}-splunk"
+          Workshop_splunk: "{{ec2_name_prefix}}-splunk"
+          Workshop: "{{ec2_name_prefix}}"
+          Index: "{{ item[0] }}"
+          Student: "student{{item[0] + 1}}"
+          AWS_USERNAME: "{{ linklight_user }}"
+          Info: "AWS_USERNAME that provisioned this-> {{ linklight_user }}"
+          Linklight: "This was provisioned through the linklight provisioner"
+          Students: "{{student_total}}"
+          short_name: "splunk"
+          username: '{{ec2_info["rhel7"]["username"]}}'
+      with_indexed_items:
+        - "{{ splunk_output['instance_ids'] }}"
+      when: splunk_output['instance_ids'] is not none
+
+- name: EC2 Create Block for qradar
+  when: security_console == 'qradar'
+  block:
+    - name: Create EC2 instances for qradar
+      ec2:
+        assign_public_ip: yes
+        key_name: "{{ ec2_name_prefix }}-key"
+        group: "{{ ec2_security_group }}"
+        instance_type: "{{ ec2_info['qradar']['size'] }}"
+        image: "{{ qradar_ami['image_id'] }}"
+        region: "{{ ec2_region }}"
+        exact_count: "{{ student_total }}"
+        count_tag:
+          Workshop_qradar: "{{ec2_name_prefix}}-qradar"
+        wait: "{{ ec2_wait }}"
+        vpc_subnet_id: "{{ ec2_vpc_subnet_id }}"
+        volumes:
+          - device_name: /dev/sda1
+            volume_type: gp2
+            volume_size: "{{ ec2_info['qradar']['disk_space'] }}"
+            delete_on_termination: true
+      register: qradar_output
+
+    - name: Ensure tags are present for qradar
+      ec2_tag:
+        region: "{{ ec2_region }}"
+        resource: "{{item[1]}}"
+        state: present
+        tags:
+          Name: "{{ ec2_name_prefix }}-student{{item[0] + 1}}-qradar"
+          Workshop_qradar: "{{ec2_name_prefix}}-qradar"
+          Workshop: "{{ec2_name_prefix}}"
+          Index: "{{ item[0] }}"
+          Student: "student{{item[0] + 1}}"
+          AWS_USERNAME: "{{ linklight_user }}"
+          Info: "AWS_USERNAME that provisioned this-> {{ linklight_user }}"
+          Linklight: "This was provisioned through the linklight provisioner"
+          Students: "{{student_total}}"
+          short_name: "qradar"
+          username: '{{ec2_info["rhel7"]["username"]}}'
+      with_indexed_items:
+        - "{{ qradar_output['instance_ids'] }}"
+      when: qradar_output['instance_ids'] is not none
 
 - name: Create EC2 instances for snort
   ec2:
