--- a/provisioner/security.yml
+++ b/provisioner/security.yml
@@ -71,6 +71,7 @@
     ids_install_snort_group: root
     ids_normalize_logs: false
     ids_install_snort_interface: eth1
+    ids_install_snort_use_pulledpork: false
   tasks:
     - name: Set fact vars for ids based SIEM type
       block:
