--- a/provisioner/roles/manage_ec2_instances/tasks/addhost_security.yml
+++ b/provisioner/roles/manage_ec2_instances/tasks/addhost_security.yml
@@ -72,7 +72,7 @@
         ansible_port: "{{ ssh_port }}"
         ansible_ssh_private_key_file: "{{ playbook_dir }}/{{ec2_name_prefix}}/{{ec2_name_prefix}}-private.pem"
         ansible_python_interpreter: "{{ec2_info['rhel7']['python_interpreter']}}"
-        private_ip: "{{item.private_ip_address}}"
+        private_ip: "{{ item['network_interfaces']|map(attribute='private_ip_address')|list|ipaddr('172.16.0.0/16')|first }}"
         private_ip2: "{{ item['network_interfaces']|map(attribute='private_ip_address')|list|ipaddr('172.17.0.0/16')|first }}"
         groups:
           - attack
@@ -106,7 +106,7 @@
         ansible_port: "{{ ssh_port }}"
         ansible_ssh_private_key_file: "{{ playbook_dir }}/{{ec2_name_prefix}}/{{ec2_name_prefix}}-private.pem"
         ansible_python_interpreter: "{{ec2_info['rhel7']['python_interpreter']}}"
-        private_ip: "{{item.private_ip_address}}"
+        private_ip: "{{ item['network_interfaces']|map(attribute='private_ip_address')|list|ipaddr('172.16.0.0/16')|first }}"
         private_ip2: "{{ item['network_interfaces']|map(attribute='private_ip_address')|list|ipaddr('172.17.0.0/16')|first }}"
         groups:
           - snort
@@ -155,12 +155,12 @@
         ansible_user: "{{ item.tags.username }}"
         ansible_port: "{{ ssh_port }}"
         ansible_ssh_private_key_file: "{{ playbook_dir }}/{{ec2_name_prefix}}/{{ec2_name_prefix}}-private.pem"
-        private_ip: "{{item.private_ip_address}}"
+        private_ip: "{{ item['network_interfaces']|map(attribute='private_ip_address')|list|ipaddr('172.16.0.0/16')|first }}"
         private_ip2: "{{ item['network_interfaces']|map(attribute='private_ip_address')|list|ipaddr('172.17.0.0/16')|first }}"
         groups:
           - checkpoint
           - firewall
-      loop: "{{ checkpoint_gw_node_facts.instances|flatten(levels=1) }}"
+      loop: "{{ checkpoint_gw_node_facts['instances']|flatten(levels=1) }}"
 
 - name: MANAGE WINDOWS EC2 INSTANCES (SECURITY MODE)
   block:
