--- a/provisioner/roles/manage_ec2_instances/defaults/main.yml
+++ b/provisioner/roles/manage_ec2_instances/defaults/main.yml
@@ -94,9 +94,9 @@ ec2_info:
     owners: 309956199498
     size: c4.4xlarge
     os_type: linux
-    disk_space: 200
+    disk_space: 300
     architecture: x86_64
-    filter: 'RHEL-7.7_HVM_GA-20190723-x86_64-1-Access2-GP2'
+    filter: 'AnsibleSecurity-SplunkEnterprise*'
     username: ec2-user
     python_interpreter: '/usr/bin/python'
   netapp:
