[WIP] Add Splunk to Workshop with Custom AMI
Signed-off-by: Adam Miller <admiller@redhat.com>

--- a/provisioner/roles/manage_ec2_instances/defaults/main.yml
+++ b/provisioner/roles/manage_ec2_instances/defaults/main.yml
@@ -94,9 +94,9 @@ ec2_info:
     owners: 309956199498
     size: c4.4xlarge
     os_type: linux
-    disk_space: 200
+    disk_space: 300
     architecture: x86_64
-    filter: 'RHEL-7.6_HVM-20190515-x86_64-0-Access2-GP2'
+    filter: 'AnsibleSecurity-SplunkEnterprise*'
     username: ec2-user
     python_interpreter: '/usr/bin/python'
   netapp:
